--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ set $right l
 # Your preferred terminal emulator
 set $term ghostty
 # Your preferred application launcher
-set $menu bemenu-config
+set $menu bemenu-run
 
 ### Output configuration
 #
@@ -108,6 +108,9 @@ set $base0F #b0957e
 
     # Start your launcher
     bindsym $mod+g exec $menu
+    bindsym $mod+i exec bemenu-index
+    bindsym $mod+Shift+i exec bemenu-dev
+    bindsym $mod+v exec bemenu-home
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -124,7 +127,7 @@ set $base0F #b0957e
 
 # Screenshots
     bindsym $mod+Print exec grim
-    bindsym $mod+Shift+Print exec slurp
+    bindsym $mod+Shift+Print exec slurp | grim -g-
 
 #
 # Moving around:
@@ -254,7 +257,7 @@ bindsym $mod+r mode "resize"
 bar {
     position top
     height 30
-    font Crimson 15
+    font CrimsonPro 16
 
     gaps 15
 
@@ -267,7 +270,7 @@ bar {
         background #00000000
         inactive_workspace #32323200 #32323200 $foreground
         active_workspace $base0F $base07 $base00
-        focused_workspace $base0F $base08 $base00
+        focused_workspace $base0F #5fa072 $base00
     }
 }
 
@@ -277,5 +280,7 @@ client.unfocused        $base01 $base0D $base05 $base01 $base01
 client.urgent           $base08 $base08 $base00 $base08 $base08
 #client.placeholder      $base00 $base00 $base05 $base00 $base00
 #client.background       $base07
+
+exec dbus-update-activation-environment DISPLAY I3SOCK SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=$nameofcompositor
 
 include /etc/sway/config.d/*
