--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,5 +11,6 @@ bind-key -n M-BSpace send-keys C-w
 
 bind f run "tmux neww ~/.config/scripts/tmux-session-dispensary.sh"
 bind d run "~/.config/scripts/tmux-session-dispensary.sh ~/dev"
+bind h run "~/.config/scripts/tmux-session-dispensary.sh ~/"
 
 bind r source-file "~/.config/tmux/tmux.conf"
