--- a/.config/sway/config
+++ b/.config/sway/config
@@ -16,26 +16,25 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term ghostty
+set $term foot
 # Your preferred application launcher
 set $menu bemenu-run
 
 # hide mouse cursor after miliseconds
-seat seat0 hide_cursor 1500
-
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 set $wallpaper "~/Pictures/wallpaper/green_leaves-edit.jpg"
 output "LG Electronics LG ULTRAGEAR 307MXPH3B832" pos 0 0 res 2560x1440 bg $wallpaper fill
-output "ViewSonic Corporation XG2405 VYE202400166" pos -1080 50 mode 1080x1920@144Hz bg $wallpaper fill transform 270 adaptive_sync on
+output "ViewSonic Corporation XG2405 VYE202400166" pos -1920 300 mode 1920x1080@144Hz bg $wallpaper fill adaptive_sync on
+#output "ViewSonic Corporation XG2405 VYE202400166" pos -1920 50 mode 1920x1080@144Hz bg $wallpaper fill transform 270 adaptive_sync on
 output "eDP-1" pos 0 0 res 1920x1080 bg $wallpaper fill
 output "DP-2" pos 1920 0 res 2560x1440@75Hz bg $wallpaper fill
 
 gaps inner 0
-blur_radius 1
-blur_passes 3
-blur true
+#blur_radius 1
+#blur_passes 3
+#blur true
 
 default_border pixel 2
 default_floating_border none
@@ -262,7 +261,7 @@ bindsym $mod+r mode "resize"
 bar {
     position top
     height 30
-    font CrimsonPro 16
+    font Crimson 16
 
     gaps 0
 
